--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "4.7.0",
     "tailwindcss": "4.1.12",
-    "vite": "6.3.5"
+    "vite": "6.3.5",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "peerDependencies": {
     "react": "^18.3.1",
